--- a/spot-sample-simple/src/main/resources/application.properties
+++ b/spot-sample-simple/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-mail.smtp.host=localhost
-mail.smtp.port=2525
-mail.smtp.user=
-mail.smtp.password=
+mail.smtp.host     = localhost
+mail.smtp.port     = 2525
+mail.smtp.user     = 
+mail.smtp.password = 
+
+service.templaterenderer.thymeleaf.cache = false
