improved exception page template, updated spark, small fixes, implemented basic sample crud interface for party sample

--- a/spot-sample-simple/src/main/resources/templates/homepage.properties
+++ b/spot-sample-simple/src/main/resources/templates/homepage.properties
@@ -2,3 +2,6 @@ party.title = Title
 party.motto = Motto
 party.location = Location
 party.date = Date
+
+login.username=Username:
+login.password=Password:
