docs updated and small party service fixes

--- a/spot-sample-simple/src/main/resources/templates/homepage.properties
+++ b/spot-sample-simple/src/main/resources/templates/homepage.properties
@@ -2,6 +2,7 @@ party.title = Title
 party.motto = Motto
 party.location = Location
 party.date = Date
+parties.empty= There are not parties yet :-(
 
 login.username=Username:
 login.password=Password:
