--- a/spot-mail/pom.xml
+++ b/spot-mail/pom.xml
@@ -6,7 +6,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>at.spot</groupId>
+		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
@@ -74,7 +74,7 @@
 							<artifactId>spring-aspects</artifactId>
 						</aspectLibrary>
 						<aspectLibrary>
-							<groupId>at.spot</groupId>
+							<groupId>io.spot-next</groupId>
 							<artifactId>spot-core</artifactId>
 						</aspectLibrary>
 					</aspectLibraries>
@@ -105,7 +105,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>at.spot</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 			<exclusions>
@@ -117,13 +117,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>at.spot</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
-			<groupId>at.spot</groupId>
+			<groupId>io.spot-next</groupId>
 			<artifactId>spot-core-base-models</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
