--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.spot-next</groupId>
 	<artifactId>spot-framework</artifactId>
@@ -525,7 +526,9 @@
 						<version>false</version>
 						<nosince>true</nosince>
 						<author>false</author>
-						
+						<defaultAuthor>mojo2012</defaultAuthor>
+						<defaultVersion>1.0</defaultVersion>
+						<level>public</level>
 					</configuration>
 					<executions>
 						<execution>
