add gen/src/java to eclipse automatically

--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,11 @@
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>flatten-maven-plugin</artifactId>
 				<version>1.0.0</version>
 				<configuration>
@@ -261,6 +266,25 @@
 							</fileset>
 						</filesets>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>build-helper-maven-plugin</artifactId>
+					<version>3.0.0</version>
+					<executions>
+						<execution>
+							<id>add-source</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>add-source</goal>
+							</goals>
+							<configuration>
+								<sources>
+									<source>src/gen/java</source>
+								</sources>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 
 				<!-- RESOURCE GENERATION -->
