--- a/pom.xml
+++ b/pom.xml
@@ -117,17 +117,17 @@
 
 	<modules>
 		<module>build-tools</module>
-		<module>spot-maven-plugin</module>
 		<module>spot-core-support</module>
-		<module>spot-core-base-models</module>
-		<module>spot-core-model-infrastructure</module>
 		<module>spot-instrumentation</module>
+		<module>spot-core-model-infrastructure</module>
+		<module>spot-maven-plugin</module>
+		<module>spot-core-base-models</module>
 		<module>spot-core</module>
 		<module>spot-core-shell</module>
 		<module>spot-spring-web-support</module>
-		<module>spot-commerce-spring-base</module>
-		<module>spot-commerce-base</module>
 		<module>spot-cms-base</module>
+		<module>spot-commerce-base</module>
+		<module>spot-commerce-spring-base</module>
 		<!-- <module>spot-mail</module> -->
 		<module>spot-sample-simple</module>
 		<module>archetype-empty</module>
@@ -287,42 +287,6 @@
 					</executions>
 				</plugin>
 
-				<!-- RESOURCE GENERATION -->
-				<plugin>
-					<groupId>io.spot-next</groupId>
-					<artifactId>spot-maven-plugin</artifactId>
-					<version>${revision}</version>
-					<configuration>
-						<classFileTransformers>
-							<classFileTransformer>
-								io.spotnext.core.infrastructure.instrumentation.JpaEntityClassTransformer
-							</classFileTransformer>
-						</classFileTransformers>
-						<includeJars>false</includeJars>
-					</configuration>
-					<executions>
-						<execution>
-							<id>Item type generation</id>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>generate-types</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>Item type post-processing</id>
-							<goals>
-								<goal>transform-types</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>Item type post-processing (test)</id>
-							<goals>
-								<goal>transform-types</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-
 				<!-- COMPILING -->
 				<plugin>
 					<artifactId>maven-resources-plugin</artifactId>
@@ -336,8 +300,19 @@
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
-						<useIncrementalCompilation>false</useIncrementalCompilation>
+						<useIncrementalCompilation>true</useIncrementalCompilation>
+						<skip>true</skip>
+						<skipMain>true</skipMain>
 					</configuration>
+					<executions>
+						<execution>
+							<id>default-compile</id>
+							<phase>none</phase>
+							<goals>
+								<goal>compile</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 
 				<plugin>
@@ -387,6 +362,44 @@
 								<!-- IMPORTANT -->
 								<goal>compile</goal>
 								<goal>test-compile</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+				<!-- RESOURCE GENERATION -->
+				<plugin>
+					<groupId>io.spot-next</groupId>
+					<artifactId>spot-maven-plugin</artifactId>
+					<version>${revision}</version>
+					<configuration>
+						<classFileTransformers>
+							<classFileTransformer>
+								io.spotnext.core.infrastructure.instrumentation.JpaEntityClassTransformer
+							</classFileTransformer>
+						</classFileTransformers>
+						<includeJars>false</includeJars>
+					</configuration>
+					<executions>
+						<execution>
+							<id>Item type generation</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>generate-types</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>Item type post-processing</id>
+							<phase>compile</phase>
+							<goals>
+								<goal>transform-types</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>Item type post-processing (test)</id>
+							<phase>test-compile</phase>
+							<goals>
+								<goal>transform-types</goal>
 							</goals>
 						</execution>
 					</executions>
