readme banner update + clear custom jars from m2 repository

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ env:
 #  directories:
 #  - "$HOME/.cache"
 
+before_cache:
+  script: "rm -R ~/.m2/repository/io/spot-next/"
+
 cache:
   directories:
     - ~/.m2/repository
