travis "remove cache" removed

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ env:
 #  directories:
 #  - "$HOME/.cache"
 
-before_cache:
-  script: "rm -R ~/.m2/repository/io/spot-next/"
+#before_cache:
+#  script: "rm -R ~/.m2/repository/io/spot-next/"
 
 cache:
   directories:
