--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,14 @@ env:
 
 #cache:
 #  directories:
-#  - "$HOME/.cache"
-
-#before_cache:
-#  script: "rm -R ~/.m2/repository/io/spot-next/"
+#  - $HOME/.cache
 
 cache:
   directories:
-    - ~/.m2/repository
+    - $HOME/.m2/repository
+
+before_cache:
+  - rm -R $HOME/.m2/repository/io/spot-next
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_2dffe6d9f24e_key -iv $encrypted_2dffe6d9f24e_iv -in codesigning.asc.enc -out codesigning.asc -d
