--- a/spot-cms-base/pom.xml
+++ b/spot-cms-base/pom.xml
@@ -20,7 +20,7 @@
 		<plugins>
 			<!-- COMPILING -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
+				<groupId>com.github.m50d</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
 			</plugin>
 
