--- a/spot-core-infrastructure/pom.xml
+++ b/spot-core-infrastructure/pom.xml
@@ -16,7 +16,7 @@
 		<plugins>
 			<!-- COMPILING -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
+				<groupId>com.github.m50d</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
 			</plugin>
 
