--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -15,7 +15,7 @@
 		<plugins>
 			<!-- COMPILING -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
+				<groupId>com.github.m50d</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
 			</plugin>
 
