--- a/spot-sample-simple/pom.xml
+++ b/spot-sample-simple/pom.xml
@@ -20,7 +20,7 @@
 
 			<!-- COMPILING -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
+				<groupId>com.github.m50d</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
 			</plugin>
 
