--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -209,5 +209,13 @@
 			<version>2.7.2</version>
 		</dependency>
 
+		<!-- REST TESTING -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.1.1</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
