--- a/spot-core/src/main/resources/core-testing.properties
+++ b/spot-core/src/main/resources/core-testing.properties
@@ -25,3 +25,12 @@ database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
 database.jdbc.url=jdbc:hsqldb:mem:spot-core_testing
 database.jdbc.username=sa
 database.jdbc.password=
+
+# H2
+#h2.implicitRelativePath=true
+#service.persistence.hibernate.dialect.storage_engine=
+#service.persistence.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#database.jdbc.driverClassName=org.h2.Driver
+#database.jdbc.url=jdbc:h2:mem:spot-core_testing
+#database.jdbc.username=sa
+#database.jdbc.password=
