--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -21,6 +21,7 @@ init.default.admin.password=MD5:ee10c315eba2c75b403ea99136f5b48d
 service.typesystem.rest.port=19000
 
 # HIBERNATE
+service.persistene.transaction.timeout=60
 service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
 service.persistence.hibernate.hbm2ddl.auto=none
@@ -36,9 +37,20 @@ hibernate.cache.region.factory_class=ehcache
 service.persistence.hibernate.dialect.storage_engine=
 service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
-database.jdbc.url=jdbc:hsqldb:file:data/store/spot.db
+database.jdbc.url=jdbc:hsqldb:file:data/store/spot.hsql
 database.jdbc.username=sa
 database.jdbc.password=
+
+# H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#h2.implicitRelativePath=true
+#service.persistence.hibernate.dialect.storage_engine=
+#service.persistence.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#database.jdbc.driverClassName=org.h2.Driver
+#database.jdbc.url=jdbc:h2:file:./data/store/spot.h2
+#database.jdbc.username=sa
+#database.jdbc.password=
 
 # MYSQL
 # WARNING: never use MyISAM tables as then transactions don't work
