--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -21,6 +21,7 @@ init.default.admin.password=MD5:ee10c315eba2c75b403ea99136f5b48d
 service.typesystem.rest.port=19000
 
 # HIBERNATE
+service.persistene.transaction.timeout=60
 service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
 service.persistence.hibernate.hbm2ddl.auto=none
