--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 		<module>spot-core-infrastructure</module>
 		<module>spot-maven-plugin</module>
 		<module>spot-core</module>
-<!-- 		<module>spot-core-shell</module> -->
+		<!-- <module>spot-core-shell</module> -->
 		<module>spot-spring-web-support</module>
 		<module>spot-cms-base</module>
 		<module>spot-commerce-base</module>
@@ -194,6 +194,17 @@
 	</distributionManagement>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/gen/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
