--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -26,6 +26,7 @@ service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
 service.persistence.hibernate.hbm2ddl.auto=none
 service.persistence.hibernate.enable_lazy_load_no_trans=true
+service.persistence.sequencegenerator.poolsize=50
 
 # HIBERNATE CHACING
 hibernate.cache.use_second_level_cache=true
