--- a/docs/package.json
+++ b/docs/package.json
@@ -7,6 +7,7 @@
     "docsify": "^4.7.1",
     "docsify-copy-code": "^2.0.2",
     "docsify-themeable": "^0.3.0",
+    "mermaid": "^8.0.0-rc.8",
     "prismjs": "^1.15.0"
   },
   "devDependencies": {},
